--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -11,9 +14,20 @@
   padding: 4px 32px;
 }
 
+.left-links{
+  margin-left: 15px;
+}
+
+.right-links{
+  margin-right: 15px;
+}
+
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  padding: 0;
+  gap: 10px;
 }
 
 a {
