--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,10 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+  text-align: center;
 }
 
 img {
@@ -23,4 +28,17 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+.plants{
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.plant{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
 }
